PS-2016.3.1 <ferdi@EpicArrow Update ignore.xml, Default _1_.xml, php.xml, PHP.xml

--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -21,68 +21,56 @@
   </template>
   <template name="require" value="require &quot;$END$&quot;;" description="'require' statement" toReformat="true" toShortenFQNames="true">
     <context>
-      <option name="PHP Expression" value="true" />
       <option name="PHP Statement" value="true" />
+      <option name="PHP Expression" value="true" />
     </context>
   </template>
   <template name="require_once" value="require_once &quot;$END$&quot;;" description="'require_once' statement" toReformat="true" toShortenFQNames="true">
     <context>
-      <option name="PHP Expression" value="true" />
       <option name="PHP Statement" value="true" />
+      <option name="PHP Expression" value="true" />
     </context>
   </template>
   <template name="include" value="include &quot;$END$&quot;;" description="'include' statement" toReformat="true" toShortenFQNames="true">
     <context>
-      <option name="PHP Expression" value="true" />
       <option name="PHP Statement" value="true" />
+      <option name="PHP Expression" value="true" />
     </context>
   </template>
   <template name="include_once" value="include_once &quot;$END$&quot;;" description="'include_once' statement" toReformat="true" toShortenFQNames="true">
     <context>
-      <option name="PHP Expression" value="true" />
       <option name="PHP Statement" value="true" />
+      <option name="PHP Expression" value="true" />
     </context>
   </template>
   <template name="pubf" value="public function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="public function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
   <template name="pubsf" value="public static function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="public static function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
   <template name="prof" value="protected function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="protected function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
   <template name="prosf" value="protected static function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="protected static function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
   <template name="prif" value="private function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="private function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
   <template name="prisf" value="private static function $NAME$($PARAMETERS$) {&#10;    $END$&#10;}" description="private static function" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="PHP Class Member" value="true" />
-    </context>
+    <context />
   </template>
 </templateSet>
