PS-2017.2.4 <ferdi@EpicArrow Update Materialize.xml

--- a/templates/Materialize.xml
+++ b/templates/Materialize.xml
@@ -183,4 +183,11 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="test" value="/**&#10; * @test&#10; */&#10;public function $name$() {&#10;    $content$&#10;}" description="Creates a test" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="content" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP Class Member" value="true" />
+    </context>
+  </template>
 </templateSet>
