--- a/templates/Vue.xml
+++ b/templates/Vue.xml
@@ -1,5 +1,5 @@
 <templateSet group="Vue">
-  <template name="mounted" value="mounted() {&#10;    this.$nextTick(function () {&#10;        $END$&#10;    });&#10;}," toReformat="false" toShortenFQNames="true">
+  <template name="mounted" value="mounted() {&#10;    this.$nextTick(function () {&#10;        $END$&#10;    });&#10;}," description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="Vue" value="true" />
     </context>
