PS-2017.3 <Agando@Spartanium Update JavaScript.xml

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -10,4 +10,11 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="comment" value="/***********************************************************&#10; $title$&#10; --------------------------&#10; $desc$&#10; ************************************************************/&#10; $END$" description="Inserts a js comment" toReformat="false" toShortenFQNames="true">
+    <variable name="title" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="desc" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
