--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -17,4 +17,11 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="log" value="console.log($log$);" description="console.log" toReformat="false" toShortenFQNames="true">
+    <variable name="log" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="Vue" value="true" />
+    </context>
+  </template>
 </templateSet>
