PS-2017.3.2 <Ferdinand@SV6187 Update Zen CSS.xml	Delete ui.lnf.xml

--- a/templates/Zen CSS.xml
+++ b/templates/Zen CSS.xml
@@ -12,7 +12,7 @@
       <option name="CSS" value="true" />
     </context>
   </template>
-  <template name="content" value="/* ==========================================================================&#10;   $NAME$&#10;   ========================================================================== */&#10;/**&#10; * Table of Contents:&#10; *&#10; *  1. General&#10; *  2. $HEADING$&#10; */&#10;&#10;/*********************&#10;  1. General&#10;**********************/&#10;&#10;&#10;/*********************&#10;  2. $HEADING$&#10;**********************/" toReformat="false" toShortenFQNames="true">
+  <template name="content" value="/* ==========================================================================&#10;   $NAME$&#10;   ========================================================================== */&#10;/**&#10; * Table of Contents:&#10; *&#10; *  1. General&#10; *  2. $HEADING$&#10; */&#10;&#10;/*********************&#10;  1. General&#10;**********************/&#10;&#10;&#10;/*********************&#10;  2. $HEADING$&#10;**********************/" description="" toReformat="false" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="HEADING" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
